tdf#94908 : Autofilter ok button is blocked

Change-Id: I0a1ad60cb6eea26899604641f981642943b06347